--- a/CapitalTwo/package.json
+++ b/CapitalTwo/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "react": "16.2.0",
-    "react-native": "0.53.0"
+    "react-native": "0.53.0",
+    "react-native-router-flux": "^4.0.0-beta.28"
   },
   "devDependencies": {
     "babel-jest": "22.2.2",
